// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCodeBlock dynamic content updates DOM when input changes 1`] = `
<div>
  <div
    class="euiCodeBlock emotion-euiCodeBlock-s"
  >
    <pre
      class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
      tabindex="-1"
    >
      <code
        class="euiCodeBlock__code emotion-euiCodeBlock__code"
        data-code-language="javascript"
      >
        <span
          class="euiCodeBlock__line emotion-euiCodeBlock__line"
        >
          <span
            class="token keyword"
          >
            const
          </span>
           value 
          <span
            class="token operator"
          >
            =
          </span>
           
          <span
            class="token string"
          >
            'State 1'
          </span>
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`EuiCodeBlock dynamic content updates DOM when input changes 2`] = `
<div>
  <div
    class="euiCodeBlock emotion-euiCodeBlock-s"
  >
    <pre
      class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
      tabindex="-1"
    >
      <code
        class="euiCodeBlock__code emotion-euiCodeBlock__code"
        data-code-language="javascript"
      >
        <span
          class="euiCodeBlock__line emotion-euiCodeBlock__line"
        >
          <span
            class="token keyword"
          >
            const
          </span>
           value 
          <span
            class="token operator"
          >
            =
          </span>
           
          <span
            class="token string"
          >
            'State 2'
          </span>
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`EuiCodeBlock fullscreen displays content in fullscreen mode 1`] = `
<div
  class="euiCodeBlockFullScreen emotion-euiCodeBlock-l-isFullScreen"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding-controlsOffset"
    tabindex="0"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="javascript"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        <span
          class="token keyword"
        >
          const
        </span>
         value 
        <span
          class="token operator"
        >
          =
        </span>
         
        <span
          class="token string"
        >
          "hello"
        </span>
      </span>
    </code>
  </pre>
  <div
    class="euiCodeBlock__controls emotion-euiCodeBlock__controls-l"
  >
    <button
      aria-label="Collapse"
      class="euiButtonIcon euiCodeBlock__fullScreenButton emotion-euiButtonIcon-xs-empty-text"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="fullScreenExit"
      />
    </button>
  </div>
</div>
`;

exports[`EuiCodeBlock line numbers renders annotated line numbers 1`] = `
<div
  class="euiCodeBlock testClass1 testClass2 emotion-euiCodeBlock-s-euiTestCss"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line-hasLineNumbers"
      >
        <span
          class="euiCodeBlock__lineNumberWrapper emotion-euiCodeBlock__lineNumberWrapper"
          style="inline-size: 8px;"
        >
          <span
            aria-hidden="true"
            class="euiCodeBlock__lineNumber emotion-euiCodeBlock__lineNumber"
            data-line-number="1"
          />
          <div
            class="euiPopover euiCodeBlock__lineAnnotation emotion-euiPopover-euiCodeBlockAnnotation"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                aria-label="Click to view a code annotation for line 1"
                class="emotion-euiCodeBlockAnnotation__buttonIcon"
                data-test-subj="euiCodeBlockAnnotationIcon"
              >
                <span
                  color="ghost"
                  data-euiicon-type="AnnotationInfoIcon"
                />
              </button>
            </div>
          </div>
        </span>
        <span
          class="euiCodeBlock__lineText emotion-euiCodeBlock__lineText"
        >
          var some = 'code';

        </span>
      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line-hasLineNumbers"
      >
        <span
          class="euiCodeBlock__lineNumberWrapper emotion-euiCodeBlock__lineNumberWrapper"
          style="inline-size: 8px;"
        >
          <span
            aria-hidden="true"
            class="euiCodeBlock__lineNumber emotion-euiCodeBlock__lineNumber"
            data-line-number="2"
          />
        </span>
        <span
          class="euiCodeBlock__lineText emotion-euiCodeBlock__lineText"
        >
          console.log(some);
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock line numbers renders highlighted line numbers 1`] = `
<div
  class="euiCodeBlock testClass1 testClass2 emotion-euiCodeBlock-s-euiTestCss"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line-hasLineNumbers"
      >
        <span
          class="euiCodeBlock__lineNumberWrapper emotion-euiCodeBlock__lineNumberWrapper"
          style="inline-size: 8px;"
        >
          <span
            aria-hidden="true"
            class="euiCodeBlock__lineNumber emotion-euiCodeBlock__lineNumber"
            data-line-number="1"
          />
        </span>
        <span
          class="euiCodeBlock__lineText emotion-euiCodeBlock__lineText-isHighlighted"
        >
          var some = 'code';

        </span>
      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line-hasLineNumbers"
      >
        <span
          class="euiCodeBlock__lineNumberWrapper emotion-euiCodeBlock__lineNumberWrapper"
          style="inline-size: 8px;"
        >
          <span
            aria-hidden="true"
            class="euiCodeBlock__lineNumber emotion-euiCodeBlock__lineNumber"
            data-line-number="2"
          />
        </span>
        <span
          class="euiCodeBlock__lineText emotion-euiCodeBlock__lineText"
        >
          console.log(some);
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock line numbers renders line numbers 1`] = `
<div
  class="euiCodeBlock testClass1 testClass2 emotion-euiCodeBlock-s-euiTestCss"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line-hasLineNumbers"
      >
        <span
          class="euiCodeBlock__lineNumberWrapper emotion-euiCodeBlock__lineNumberWrapper"
          style="inline-size: 8px;"
        >
          <span
            aria-hidden="true"
            class="euiCodeBlock__lineNumber emotion-euiCodeBlock__lineNumber"
            data-line-number="1"
          />
        </span>
        <span
          class="euiCodeBlock__lineText emotion-euiCodeBlock__lineText"
        >
          var some = 'code';

        </span>
      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line-hasLineNumbers"
      >
        <span
          class="euiCodeBlock__lineNumberWrapper emotion-euiCodeBlock__lineNumberWrapper"
          style="inline-size: 8px;"
        >
          <span
            aria-hidden="true"
            class="euiCodeBlock__lineNumber emotion-euiCodeBlock__lineNumber"
            data-line-number="2"
          />
        </span>
        <span
          class="euiCodeBlock__lineText emotion-euiCodeBlock__lineText"
        >
          console.log(some);
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock line numbers renders line numbers with a start value 1`] = `
<div
  class="euiCodeBlock testClass1 testClass2 emotion-euiCodeBlock-s-euiTestCss"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line-hasLineNumbers"
      >
        <span
          class="euiCodeBlock__lineNumberWrapper emotion-euiCodeBlock__lineNumberWrapper"
          style="inline-size: 16px;"
        >
          <span
            aria-hidden="true"
            class="euiCodeBlock__lineNumber emotion-euiCodeBlock__lineNumber"
            data-line-number="10"
          />
        </span>
        <span
          class="euiCodeBlock__lineText emotion-euiCodeBlock__lineText"
        >
          var some = 'code';

        </span>
      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line-hasLineNumbers"
      >
        <span
          class="euiCodeBlock__lineNumberWrapper emotion-euiCodeBlock__lineNumberWrapper"
          style="inline-size: 16px;"
        >
          <span
            aria-hidden="true"
            class="euiCodeBlock__lineNumber emotion-euiCodeBlock__lineNumber"
            data-line-number="11"
          />
        </span>
        <span
          class="euiCodeBlock__lineText emotion-euiCodeBlock__lineText"
        >
          console.log(some);
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props fontSize l is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-l"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props fontSize m is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-m"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props fontSize s is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-s"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props isCopyable is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-s-hasControls"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding-controlsOffset"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
  <div
    class="euiCodeBlock__controls emotion-euiCodeBlock__controls-l"
  >
    <div
      class="euiCodeBlock__copyButton"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Copy"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiCodeBlockCopy"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="copyClipboard"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiCodeBlock props language is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-s"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="html"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props overflowHeight is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-s-hasControls"
  style="max-block-size: 200px;"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding-controlsOffset"
    style="max-block-size: 200px;"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
  <div
    class="euiCodeBlock__controls emotion-euiCodeBlock__controls-l"
  >
    <button
      aria-label="Expand"
      class="euiButtonIcon euiCodeBlock__fullScreenButton emotion-euiButtonIcon-xs-empty-text"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="fullScreen"
      />
    </button>
  </div>
</div>
`;

exports[`EuiCodeBlock props paddingSize l is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-s"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props paddingSize m is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-s"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props paddingSize none is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-s"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props paddingSize s is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-s"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props transparentBackground is rendered 1`] = `
<div
  class="euiCodeBlock emotion-euiCodeBlock-s-transparentBackground"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props whiteSpace renders a pre block tag with a css class modifier 1`] = `
<div
  class="euiCodeBlock testClass1 testClass2 emotion-euiCodeBlock-s-euiTestCss"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-pre-padding"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock renders a code block 1`] = `
<div
  class="euiCodeBlock testClass1 testClass2 emotion-euiCodeBlock-s-euiTestCss"
>
  <pre
    class="euiCodeBlock__pre emotion-euiCodeBlock__pre-preWrap-padding"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code emotion-euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line emotion-euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock virtualization renders a virtualized code block 1`] = `
<div
  class="euiCodeBlock testClass1 testClass2 emotion-euiCodeBlock-s-hasControls-euiTestCss"
  style="block-size: 50%;"
>
  <div
    data-eui="EuiAutoSizer"
  >
    <pre
      class="euiCodeBlock__pre emotion-euiCodeBlock__pre-pre-padding-controlsOffset"
      style="position: relative; block-size: 600px; inline-size: 600px; overflow: auto; will-change: transform; direction: ltr;"
      tabindex="0"
    >
      <code
        aria-label="aria-label"
        class="euiCodeBlock__code emotion-euiCodeBlock__code-isVirtualized"
        data-code-language="text"
        data-test-subj="test subject string"
        style="block-size: 36px; inline-size: 100%;"
      >
        <span
          class="euiCodeBlock__line emotion-euiCodeBlock__line"
          style="position: absolute; inset-inline-start: 0; inset-block-start: 0; block-size: 18px; inline-size: 100%;"
        >
          var some = 'code';

        </span>
        <span
          class="euiCodeBlock__line emotion-euiCodeBlock__line"
          style="position: absolute; inset-inline-start: 0; inset-block-start: 18px; block-size: 18px; inline-size: 100%;"
        >
          console.log(some);
        </span>
      </code>
    </pre>
  </div>
  <div
    class="euiCodeBlock__controls emotion-euiCodeBlock__controls-l"
  >
    <button
      aria-label="Expand"
      class="euiButtonIcon euiCodeBlock__fullScreenButton emotion-euiButtonIcon-xs-empty-text"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="fullScreen"
      />
    </button>
  </div>
</div>
`;
